# Stamp-Detection

./: .gitignore  README.md  app.py  label_images_app.py  pyproject.toml
input/yolo_dataset/: data.yaml
notebooks/: detect_stamps.ipynb  download_data.ipynb  train_yolo.ipynb
runs/detect/stamp_yolov8n/: args.yaml  results.csv
src/: detector.py  utils.py
