[project]
name = "stamp-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "mahmoud khaled",email = "54672453+mahmoudkahled@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub (>=0.3.10,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
